# mongodb-mlops

./: .gitignore  LICENSE  README.md  log_docs.md  pyproject.toml  setup.py  test_exception.py
notebook/: exp-notebook.ipynb  mongoDB-demo.ipynb  rf_model.pkl
src/components/: data_ingestion.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
