[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models - Vehicle Insurance Domain"
authors = [{name = "Anusha K", email = "anushak26121@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}